--- a/src/components/database/dataTable.css
+++ b/src/components/database/dataTable.css
@@ -7,5 +7,10 @@ th{
     border: 1px solid;
     background: var(--secondary-color);
     min-width: 30px;
+    cursor: pointer;
+}
+
+th:active{
+    border-style: outset;
 }
 
