--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -5,24 +5,27 @@
 }
 
 .navBar {
-  min-height: 70px;
   background-color: var(--secondary-color);
   box-shadow: 3px -2px 7px rgba(0, 0, 0, 0.25) inset, -3px 5px 7px white inset;
   border: solid;
   text-align: left;
   margin-bottom: 5px;
+  min-height: 75px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .navBar > ul {
+  margin-top: 3px;
+  margin-bottom: 3px;
+  height: fit-content;
   padding: 2px;
   list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  gap: 10px;
 }
 
 .navBar > ul > li {
-  display: list-item;
-  vertical-align: middle;
   text-align: center;
 }
 .teamDiv {
