Added sort-down icon to table headers
Also positioned the icons within their span elements, to be aligned vertically

--- a/src/components/database/dataTable.css
+++ b/src/components/database/dataTable.css
@@ -14,3 +14,9 @@ th:active{
     border-style: outset;
 }
 
+span{
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    top: -2px;
+}
