--- a/src/components/database/dataTable.css
+++ b/src/components/database/dataTable.css
@@ -14,9 +14,14 @@ th:active{
     border-style: outset;
 }
 
-span{
+#sortDown{
     display: inline-block;
     vertical-align: middle;
     position: relative;
     top: -2px;
+}
+
+
+span{
+    padding-right: 2px;
 }
