Abandoned sortUp/Down Icons
Because of the problem with the state being reset each time the component re-renders, opted to use the overall sort icon, instead of trying to change the sort icon each time the headers are clicked

--- a/src/components/database/dataTable.css
+++ b/src/components/database/dataTable.css
@@ -14,11 +14,11 @@ th:active{
     border-style: outset;
 }
 
-#sortDown{
+#sort{
     display: inline-block;
     vertical-align: middle;
     position: relative;
-    top: -2px;
+    top: 0px;
 }
 
 
